--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 	},
 	"dependencies": {
 		"@prefresh/babel-plugin": "^0.4.3",
+		"@radix-ui/colors": "^0.1.8",
+		"@stitches/react": "^1.2.8",
 		"next": "12.2.4",
 		"next-plugin-preact": "^3.0.7",
 		"preact": "^10.10.1",
@@ -23,6 +25,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "^16.1.0",
 		"@commitlint/config-conventional": "^16.0.0",
+		"@karibash/pixel-units": "^2.3.0",
 		"@remix-run/eslint-config": "^1.6.5",
 		"@types/node": "18.6.4",
 		"@types/react": "18.0.16",
@@ -33,6 +36,7 @@
 		"eslint-config-next": "12.2.4",
 		"husky": "^7.0.4",
 		"lint-staged": "^12.3.1",
+		"ts-toolbelt": "^9.6.0",
 		"typescript": "4.7.4"
 	},
 	"lint-staged": {
