feat: skills etc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,7 @@
 			"source.organizeImports": true
 		}
 	},
-	"jest.jestCommandLine": "yarn test",
+	"jest.jestCommandLine": "pnpm test",
 	"jest.autoRun": {
 		"watch": false,
 		"onStartup": ["all-tests"],
