--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"eslint-config-next": "12.2.4",
 		"husky": "^7.0.4",
 		"lint-staged": "^12.3.1",
+		"prettier": "^2.7.1",
 		"ts-toolbelt": "^9.6.0",
 		"typescript": "4.7.4"
 	},
