--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"start": "next start",
 		"lint": "next lint",
 		"prepare": "husky install",
-		"ts-check": "tsc --noEmit"
+		"ts-check": "tsc --noEmit",
+		"test": "vitest",
+		"coverage": "vitest run --coverage"
 	},
 	"dependencies": {
 		"@prefresh/babel-plugin": "^0.4.3",
@@ -42,7 +44,8 @@
 		"lint-staged": "^12.3.1",
 		"prettier": "^2.7.1",
 		"ts-toolbelt": "^9.6.0",
-		"typescript": "4.7.4"
+		"typescript": "4.7.4",
+		"vitest": "^0.21.1"
 	},
 	"lint-staged": {
 		"*.{ts,tsx,js,jsx}": [
