feat: add e2e tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,13 @@
 	"window.commandCenter": true,
 	"[svg]": {
 		"editor.defaultFormatter": "jock.svg"
-	}
+	},
+	"vitest.commandLine": "pnpm test",
+	"vitest.exclude": [
+		"**/e2e/**",
+		"**/node_modules/**",
+		"**/dist/**",
+		"**/cypress/**",
+		"**/.{idea,git,cache,output,temp}/**"
+	]
 }
