--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"lint": "next lint",
 		"prepare": "husky install",
 		"ts-check": "tsc --noEmit",
-		"test": "vitest",
+		"test": "vitest --config ./vitest.config.ts",
 		"coverage": "vitest run --coverage"
 	},
 	"dependencies": {
@@ -32,6 +32,7 @@
 		"@commitlint/cli": "^16.1.0",
 		"@commitlint/config-conventional": "^16.0.0",
 		"@karibash/pixel-units": "^2.3.0",
+		"@playwright/test": "^1.25.2",
 		"@remix-run/eslint-config": "^1.6.5",
 		"@types/node": "18.6.4",
 		"@types/react": "18.0.16",
@@ -42,6 +43,7 @@
 		"eslint-config-next": "12.2.4",
 		"husky": "^7.0.4",
 		"lint-staged": "^12.3.1",
+		"preact-ssr-prepass": "^1.2.0",
 		"prettier": "^2.7.1",
 		"ts-toolbelt": "^9.6.0",
 		"typescript": "4.7.4",
