--- a/package.json
+++ b/package.json
@@ -15,19 +15,30 @@
 		"e2e": "playwright test"
 	},
 	"dependencies": {
+		"@mdx-js/loader": "^2.1.3",
+		"@mdx-js/preact": "^2.1.3",
+		"@next/mdx": "^12.3.1",
 		"@prefresh/babel-plugin": "^0.4.3",
 		"@radix-ui/colors": "^0.1.8",
 		"@stitches/react": "^1.2.8",
-		"next": "12.2.4",
+		"gray-matter": "^4.0.3",
+		"mdx-bundler": "^9.0.1",
+		"next": "12.3.1",
 		"next-plugin-preact": "^3.0.7",
-		"preact": "^10.10.1",
-		"preact-render-to-string": "^5.2.1",
+		"preact": "^10.11.0",
+		"preact-render-to-string": "^5.2.4",
 		"react": "npm:@preact/compat@17.1.1",
-		"react-dom": "npm:@preact/compat@17.1.1",
-		"react-ssr-prepass": "npm:preact-ssr-prepass@^1.2.0",
+		"react-dom": "npm:@preact/compat@^17.1.1",
+		"reading-time": "^1.5.0",
+		"rehype-autolink-headings": "^6.1.1",
+		"rehype-highlight": "^5.0.2",
+		"rehype-prism-plus": "^1.5.0",
+		"rehype-slug": "^5.0.1",
+		"remark-frontmatter": "^4.0.1",
 		"sharp": "^0.30.7",
 		"stitches-reset": "^1.0.0",
-		"webpack": "^5.74.0"
+		"webpack": "^5.74.0",
+		"zod": "^3.19.1"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^16.1.0",
@@ -44,7 +55,6 @@
 		"eslint-config-next": "12.2.4",
 		"husky": "^7.0.4",
 		"lint-staged": "^12.3.1",
-		"preact-ssr-prepass": "^1.2.0",
 		"prettier": "^2.7.1",
 		"ts-toolbelt": "^9.6.0",
 		"typescript": "4.7.4",
