--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
 		"@prefresh/babel-plugin": "^0.4.3",
 		"@radix-ui/colors": "^0.1.8",
 		"@stitches/react": "^1.2.8",
+		"fontfaceobserver": "^2.3.0",
 		"gray-matter": "^4.0.3",
 		"mdx-bundler": "^9.0.1",
 		"next": "12.3.1",
 		"next-plugin-preact": "^3.0.7",
+		"path": "^0.12.7",
 		"preact": "^10.11.0",
 		"preact-render-to-string": "^5.2.4",
+		"prism-themes": "^1.9.0",
 		"react": "npm:@preact/compat@17.1.1",
 		"react-dom": "npm:@preact/compat@^17.1.1",
 		"reading-time": "^1.5.0",
@@ -37,6 +40,7 @@
 		"remark-frontmatter": "^4.0.1",
 		"sharp": "^0.30.7",
 		"stitches-reset": "^1.0.0",
+		"util": "^0.12.4",
 		"webpack": "^5.74.0",
 		"zod": "^3.19.1"
 	},
@@ -46,6 +50,7 @@
 		"@karibash/pixel-units": "^2.3.0",
 		"@playwright/test": "^1.26.0",
 		"@remix-run/eslint-config": "^1.6.5",
+		"@types/fontfaceobserver": "^2.1.0",
 		"@types/node": "18.6.4",
 		"@types/react": "18.0.16",
 		"@types/react-dom": "18.0.6",
