--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@next/mdx": "^12.3.1",
 		"@prefresh/babel-plugin": "^0.4.3",
 		"@radix-ui/colors": "^0.1.8",
+		"@radix-ui/react-navigation-menu": "^1.1.1",
 		"@stitches/react": "^1.2.8",
 		"fontfaceobserver": "^2.3.0",
 		"gray-matter": "^4.0.3",
@@ -33,6 +34,7 @@
 		"prism-themes": "^1.9.0",
 		"react": "npm:@preact/compat@17.1.1",
 		"react-dom": "npm:@preact/compat@^17.1.1",
+		"react-wrap-balancer": "^0.2.4",
 		"reading-time": "^1.5.0",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-highlight": "^5.0.2",
