--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@mdx-js/loader": "^2.1.3",
 		"@mdx-js/preact": "^2.1.3",
 		"@next/mdx": "^12.3.1",
+		"@preact/signals": "^1.1.3",
 		"@prefresh/babel-plugin": "^0.4.3",
 		"@radix-ui/colors": "^0.1.8",
 		"@radix-ui/react-navigation-menu": "^1.1.1",
