--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,3 @@
 {
-	"extends": [
-		"next/core-web-vitals",
-		"plugin:testing-library/react",
-		"plugin:jest-dom/recommended",
-		"@remix-run/eslint-config",
-		"@remix-run/eslint-config/node"
-	]
+	"extends": ["@remix-run/eslint-config", "@remix-run/eslint-config/node"]
 }
